@@ -1,3 +1,8 @@
+2018-02-02  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* gdb.base/examine-backward.exp: Be more forgiving of failures to
+	read some addresses.
+
 2018-02-05  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* gdb.mi/mi-cmd-param-changed.exp
